--- a/index.html
+++ b/index.html
@@ -815,7 +815,28 @@
 </footer>
 </div>
 </body>
-<script src="index.js"></script>
+<script>
+  const topMenus = document.getElementById("top-menus");
+const topitems = document.getElementById("top-items");
+const searchBar = document.getElementById("search-bar");
+const img = document.querySelectorAll("#img");
+
+window.addEventListener("scroll", () => {  
+    const scrollPosition = window.scrollY;
+    if (scrollPosition > 100) {
+        searchBar.classList.add("hidden");
+        topMenus.classList.remove("hidden");
+        topMenus.classList.add("flex");
+        topitems.classList.add("hidden");
+        img.forEach((image) => image.classList.add("hidden"));
+    } else {
+        topMenus.classList.add("hidden");
+        searchBar.classList.remove("hidden");
+        img.forEach((image) => image.classList.remove("hidden"));
+        topitems.classList.remove("hidden");
+    }
+})
+</script>
 </html>
 
 
