Checking on versel but by putting more mt

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <div class="w-screen overflow-x-hidden">
   <!-- Nairobi -->
  
-  <section  class="lg:mt-50 lg:w-full w-[98%]">
+  <section  class="lg:mt-50 mt-60 lg:w-full w-[98%]">
     <!-- Nairobi -->
      <div class="lg:px-12 px-4">
       <span class="font-semibold text-2xl">Popular homes in Nairobi <i class="fa-solid fa-chevron-right"></i></span>
