Checking on versel but by putting more mt full responsiveness

--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
 <div class="w-screen overflow-x-hidden">
   <!-- Nairobi -->
  
-  <section  class="lg:mt-50 mt-60 lg:w-full w-[98%]">
+  <section  class="lg:mt-50 mt-60 lg:w-full w-[100%]">
     <!-- Nairobi -->
      <div class="lg:px-12 px-4">
       <span class="font-semibold text-2xl">Popular homes in Nairobi <i class="fa-solid fa-chevron-right"></i></span>
 <br>
-<div class="flex space-x-4 lg:w-full w-[calc(100%-1rem)] overflow-x-hidden">
+<div class="flex space-x-4 lg:w-full w-full overflow-x-hidden">
 
   <div class="w-[190px]">
     <div class="card mt-5 bg-[url(https://a0.muscache.com/im/pictures/miso/Hosting-942449984509127271/original/bf30050e-fa23-4f0a-8517-3f5425998eef.jpeg)] w-[190px] h-[170px] rounded-[20px] bg-cover">
@@ -276,7 +276,7 @@
      </div>
   </section>
 <br><br>
- <section class="lg:w-full w-[98%]">
+ <section class="lg:w-full w-[100%]">
   <div class="lg:px-12 px-4">
     <span class="font-semibold text-2xl">Available next month in Paris <i class="fa-solid fa-chevron-right"></i></span>
     <br>
@@ -421,7 +421,7 @@
 </div>
 </section><br><br>
 
- <section class="lg:w-full w-[98%]">
+ <section class="lg:w-full w-[100%]">
   <div class="lg:px-12 px-4">
     <span class="font-semibold text-2xl">Stay in London <i class="fa-solid fa-chevron-right"></i></span>
     <br>
@@ -566,7 +566,7 @@
 </div>
 </section><br><br>
 
-  <section class="lg:w-full w-[98%]">
+  <section class="lg:w-full w-[100%]">
     <!-- Nairobi -->
      <div class="lg:px-12 px-4">
       <span class="font-semibold text-2xl">Available next month in Al - Riyad <i class="fa-solid fa-chevron-right"></i></span>
@@ -712,7 +712,7 @@
 </div>
      </div>
   </section>
-<section class="lg:w-full w-[98%]">
+<section class="lg:w-full w-[100%]">
   <div class="lg:px-12 px-4">
     <h2 class="font-semibold text-2xl text-gray-900 ">Inspiration for future getaways</h2><br>
     <div class="footer-header flex border-b-1 border-gray-300 space-x-5" >
@@ -758,7 +758,7 @@
 </section>
 <br>
 <br>
-<section class="lg:w-full w-[98%]">
+<section class="lg:w-full w-[100%]">
   <div class="lg:px-12 px-4 grid lg:grid-cols-3 grid-cols-2 gap-4 lg:gap-4">
    <div class="bg-gray-100 p-4 rounded-lg space-y-2">
      <h2 class="text-lg font-semibold">Support</h2>
@@ -801,7 +801,7 @@
   </div>
 </section>
 <br>
-<footer class="bg-gray-100 p-4 rounded-lg grid lg:flex lg:grid-cols-2 grid-cols-1 space-y-5 justify-between lg:w-full w-[98%]">
+<footer class="bg-gray-100 p-4 rounded-lg grid lg:flex lg:grid-cols-2 grid-cols-1 space-y-5 justify-between lg:w-full w-[100%]">
   <div class="flex-grow lg:px-12 px-4">
     <p class="text-gray-700 space-x-4">&copy; 2025 Airbnb, Inc.·<a class="text-gray-900 hover:underline" href="#">Terms</a>·<a class="text-gray-900 hover:underline" href="#">Sitemap</a>·<a class="text-gray-900 hover:underline" href="#">Privacy</a>·<a class="text-gray-900 hover:underline" href="#">Your Privacy Choices</a></p>
   </div>
