Checking on versel but by putting more mt full responsiveness

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="./src/index.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
-<body>
+<body class="overflow-x-hidden">
   <div class="lg:hidden p-4 justify-between bg-gray-100 w-full fixed top-0">
        <div class="menus flex items-center content-center h-18 border-1 border-gray-200 px-10  w-[90%] rounded-full shadow-xl">
         <i class="fas fa-search"></i>&nbsp;&nbsp;&nbsp; Start your search
